--- a/index.html
+++ b/index.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <title>Frequency 183</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Press+Start+2P&display=swap');
 
     body {
       margin: 0;
       padding: 0;
       background: black;
       color: white;
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Press Start 2P', cursive;
       overflow: hidden;
+    }
+
+    /* Efeito de scanlines */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      background: repeating-linear-gradient(0deg,
+          rgba(255, 255, 255, 0.03),
+          rgba(255, 255, 255, 0.03) 1px,
+          transparent 1px,
+          transparent 4px);
+      z-index: 100;
     }
 
     #startScreen {
       position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: radial-gradient(circle at center, #111 0%, #000 100%);
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to bottom, #000000 0%, #0f0f0f 100%);
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       z-index: 10;
       transition: opacity 1s ease;
+      animation: flicker 3s infinite;
+    }
+
+    @keyframes flicker {
+
+      0%,
+      100% {
+        opacity: 1;
+      }
+
+      48% {
+        opacity: 0.97;
+      }
+
+      50% {
+        opacity: 0.92;
+      }
+
+      52% {
+        opacity: 0.98;
+      }
     }
 
     #startScreen.fade-out {
@@ -34,68 +75,127 @@
     }
 
     #startScreen h1 {
-      font-size: 64px;
+      font-size: 32px;
       margin-bottom: 40px;
-      color: #00aaff;
-      text-shadow: 0 0 10px #00aaff, 0 0 20px #0088cc;
-      animation: glow 2s ease-in-out infinite alternate;
+      color: #fff700;
+      text-shadow: 0 0 5px #fff700, 0 0 20px #fff700, 0 0 40px #fff700;
+      animation: glowText 2s ease-in-out infinite alternate;
     }
 
-    @keyframes glow {
-      from { text-shadow: 0 0 10px #00aaff, 0 0 20px #0088cc; }
-      to   { text-shadow: 0 0 20px #00ddff, 0 0 30px #00aaff; }
+    @keyframes glowText {
+      from {
+        text-shadow: 0 0 5px #fff700;
+      }
+
+      to {
+        text-shadow: 0 0 20px #fff700, 0 0 40px #fff700;
+      }
     }
 
     #startButton {
-      font-size: 24px;
-      padding: 15px 40px;
-      background: #00aaff;
-      border: none;
-      border-radius: 12px;
-      color: white;
+      font-size: 14px;
+      padding: 18px 60px;
+      background: linear-gradient(to bottom, #1a1a1a, #000);
+      border: 4px solid #444;
+      border-radius: 4px;
+      color: #ff00ff;
       cursor: pointer;
-      box-shadow: 0 0 10px #00aaff;
-      transition: background 0.3s, transform 0.2s;
-      animation: pulse 2s infinite;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      box-shadow:
+        inset 0 0 5px #000,
+        0 0 20px #ff00ff,
+        0 4px 0 #222;
+      position: relative;
+      overflow: hidden;
+      font-family: 'Press Start 2P', cursive;
+      animation: pulseBtn 2s infinite;
     }
 
-    @keyframes pulse {
-      0% { transform: scale(1); box-shadow: 0 0 10px #00aaff; }
-      50% { transform: scale(1.05); box-shadow: 0 0 20px #00aaff; }
-      100% { transform: scale(1); box-shadow: 0 0 10px #00aaff; }
+    #startButton::before {
+      content: "";
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      width: 20px;
+      height: 4px;
+      background: #ff00ff;
+      box-shadow: 0 8px 0 #ff00ff, 0 16px 0 #ff00ff;
+      opacity: 0.7;
     }
 
     #startButton:hover {
-      background: #0077aa;
+      background: #220022;
+      box-shadow:
+        inset 0 0 5px #000,
+        0 0 30px #ff00ff,
+        0 6px 0 #111;
     }
 
+    @keyframes pulseBtn {
+      0% {
+        transform: scale(1);
+        box-shadow: 0 0 10px #ff00ff;
+      }
+
+      50% {
+        transform: scale(1.05);
+        box-shadow: 0 0 20px #ff00ff;
+      }
+
+      100% {
+        transform: scale(1);
+        box-shadow: 0 0 10px #ff00ff;
+      }
+    }
+
+    #startButton:hover {
+      background: #220022;
+    }
+
+    #hud,
     canvas {
       display: none;
     }
 
-    #hud {
-      display: none;
+    #footer {
+      position: absolute;
+      bottom: 20px;
+      text-align: center;
+      width: 100%;
+      font-size: 10px;
+      color: #888;
+      font-family: monospace;
+      text-shadow: 0 0 5px #888;
     }
 
-    #footer {
-  position: absolute;
-  bottom: 20px;
-  text-align: center;
-  width: 100%;
-  font-size: 14px;
-  color: #888;
-}
+    /* VHS Border Noise */
+    #startScreen::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url('https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif');
+      background-size: cover;
+      mix-blend-mode: screen;
+      opacity: 0.08;
+      pointer-events: none;
+      z-index: 9;
+    }
   </style>
 </head>
+
 <body>
 
   <div id="startScreen">
-    <h1>FREQUENCY 183</h1>
-    <button id="startButton">Iniciar Missão</button>
+    <h1>◉ FREQUENCY 183 ◉</h1>
+    <button id="startButton">▶ Iniciar Missão</button>
 
     <footer id="footer">
-  Created by Gustavo Chimello & Olavo Xavier
-</footer>
+      ⌛ Created by Gustavo Chimello & Olavo Xavier ⌛
+    </footer>
   </div>
 
   <div id="hud"></div>
@@ -113,7 +213,7 @@
     window.addEventListener("click", () => {
       if (bgMusicIntro.paused) {
         bgMusicIntro.volume = 1;
-        bgMusicIntro.play().catch(() => {});
+        bgMusicIntro.play().catch(() => { });
       }
     }, { once: true });
 
@@ -143,4 +243,5 @@
     });
   </script>
 </body>
+
 </html>
