--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
       background: linear-gradient(to bottom, #1a1a1a, #000);
       border: 4px solid #444;
       border-radius: 4px;
-      color: #ff00ff;
+      color: #00aaff;
       cursor: pointer;
       text-transform: uppercase;
       letter-spacing: 1px;
       box-shadow:
         inset 0 0 5px #000,
-        0 0 20px #ff00ff,
+        0 0 20px #0088cc,
         0 4px 0 #222;
       position: relative;
       overflow: hidden;
@@ -119,8 +119,8 @@
       left: 10px;
       width: 20px;
       height: 4px;
-      background: #ff00ff;
-      box-shadow: 0 8px 0 #ff00ff, 0 16px 0 #ff00ff;
+      background: #00ddff;
+      box-shadow: 0 8px 0 #00ddff, 0 16px 0 #00aaff;
       opacity: 0.7;
     }
 
@@ -128,29 +128,29 @@
       background: #220022;
       box-shadow:
         inset 0 0 5px #000,
-        0 0 30px #ff00ff,
+        0 0 30px #00ddff,
         0 6px 0 #111;
     }
 
     @keyframes pulseBtn {
       0% {
         transform: scale(1);
-        box-shadow: 0 0 10px #ff00ff;
+        box-shadow: 0 0 10px #00aaff;
       }
 
       50% {
         transform: scale(1.05);
-        box-shadow: 0 0 20px #ff00ff;
+        box-shadow: 0 0 20px #00aaff;
       }
 
       100% {
         transform: scale(1);
-        box-shadow: 0 0 10px #ff00ff;
+        box-shadow: 0 0 10px #00aaff;
       }
     }
 
     #startButton:hover {
-      background: #220022;
+      background: #000c22;
     }
 
     #hud,
@@ -159,15 +159,14 @@
     }
 
     #footer {
-      position: absolute;
-      bottom: 20px;
-      text-align: center;
-      width: 100%;
-      font-size: 10px;
-      color: #888;
-      font-family: monospace;
-      text-shadow: 0 0 5px #888;
-    }
+  position: absolute;
+  bottom: 20px;
+  text-align: center;
+  width: 100%;
+  font-size: 9px;
+  color: #888;
+  text-shadow: 0 0 5px #888;
+}
 
     /* VHS Border Noise */
     #startScreen::after {
