--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       overflow: hidden;
     }
 
-    /* Efeito de scanlines */
     body::before {
       content: "";
       position: fixed;
@@ -104,7 +103,7 @@
       letter-spacing: 1px;
       box-shadow:
         inset 0 0 5px #000,
-        0 0 20px #0088cc,
+        0 0 20px #00aaff,
         0 4px 0 #222;
       position: relative;
       overflow: hidden;
@@ -119,8 +118,8 @@
       left: 10px;
       width: 20px;
       height: 4px;
-      background: #00ddff;
-      box-shadow: 0 8px 0 #00ddff, 0 16px 0 #00aaff;
+      background: #00aaff;
+      box-shadow: 0 8px 0 #00aaff, 0 16px 0 #00aaff;
       opacity: 0.7;
     }
 
@@ -128,7 +127,7 @@
       background: #220022;
       box-shadow:
         inset 0 0 5px #000,
-        0 0 30px #00ddff,
+        0 0 30px #00aaff,
         0 6px 0 #111;
     }
 
@@ -150,7 +149,7 @@
     }
 
     #startButton:hover {
-      background: #000c22;
+      background: #000522;
     }
 
     #hud,
@@ -159,14 +158,15 @@
     }
 
     #footer {
-  position: absolute;
-  bottom: 20px;
-  text-align: center;
-  width: 100%;
-  font-size: 9px;
-  color: #888;
-  text-shadow: 0 0 5px #888;
-}
+      position: absolute;
+      bottom: 20px;
+      text-align: center;
+      width: 100%;
+      font-size: 10px;
+      color: #888;
+      font-family: monospace;
+      text-shadow: 0 0 5px #888;
+    }
 
     /* VHS Border Noise */
     #startScreen::after {
